Added Keras to frozen model TF .pb & Core-ML model conversions.

--- a/notebooks/Train_FSCNN.ipynb
+++ b/notebooks/Train_FSCNN.ipynb
@@ -16,7 +16,10 @@
    "source": [
     "from PIL import ImageFile\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
-    "from fast_scnn import fast_scnn\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from seg_net.data import *\n",
+    "from seg_net.fast_scnn import fast_scnn\n",
     "from data import *\n",
     "import keras"
    ]
