Updated Fast-SCNN and Keras Convertor

--- a/notebooks/Train_segmentation_models.ipynb
+++ b/notebooks/Train_segmentation_models.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set Model Architecture"
+    "## Set Model Params"
    ]
   },
   {
@@ -55,13 +55,13 @@
     "MODEL_PATH = '/media/new_hdd2/seg_net/results/Models/Models'\n",
     "ACTIVATION = 'sigmoid'\n",
     "\n",
-    "model_name = '{0}/{1}_{2}_{3}_{4}_{5}_{6}'.format(MODEL_PATH,\n",
-    "                                                  BACKBONE,\n",
-    "                                                  MODEL_NAME,\n",
-    "                                                  LOSS_METRICS,\n",
-    "                                                  NUM_CLASS,\n",
-    "                                                  ACTIVATION,\n",
-    "                                                  INPUT_SHAPE[0])"
+    "model_fname = '{0}_{1}_{2}_{3}_{4}_{5}'.format(BACKBONE,\n",
+    "                                              MODEL_NAME,\n",
+    "                                              LOSS_METRICS,\n",
+    "                                              NUM_CLASS,\n",
+    "                                              ACTIVATION,\n",
+    "                                              INPUT_SHAPE[0])\n",
+    "keras_filename = '{}.hdf5'.format(model_fname)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.load_weights('{}.hdf5'.format(model_name))"
+    "#model.load_weights(os.path.join(MODEL_PATH,keras_filename))"
    ]
   },
   {
@@ -557,7 +557,7 @@
     "                    horizontal_flip=True,\n",
     "                    fill_mode='nearest')\n",
     "\n",
-    "myGene = trainGenerator(1,'/media/new_hdd2/seg_net/data/raw/train','images','annotations',\n",
+    "myGene = trainGenerator(1,'../data/raw/train','images','annotations',\n",
     "                        data_gen_args,save_to_dir = None,\n",
     "                        target_size = INPUT_SHAPE[:2],\n",
     "                        imgNorm=\"divide\" , \n",
@@ -565,7 +565,7 @@
     "                        num_class = NUM_CLASS, \n",
     "                        multiclass = False)\n",
     "\n",
-    "'''valGene = validationGenerator(1,'/media/new_hdd2/LV-MHP-v2/val','images','annotations',\n",
+    "'''valGene = validationGenerator(1,'../data/raw/val','images','annotations',\n",
     "                                save_to_dir = None,\n",
     "                                target_size = INPUT_SHAPE[:2],\n",
     "                                imgNorm=\"divide\" , \n",
@@ -573,7 +573,7 @@
     "                                num_class = NUM_CLASS, \n",
     "                                multiclass = False)'''\n",
     "\n",
-    "model_checkpoint = keras.callbacks.ModelCheckpoint('{}.hdf5'.format(model_name), \n",
+    "model_checkpoint = keras.callbacks.ModelCheckpoint(os.path.join(MODEL_PATH,keras_filename), \n",
     "                                                   monitor='loss',\n",
     "                                                   verbose=1, \n",
     "                                                   save_best_only=True)\n",
@@ -927,7 +927,7 @@
     "import numpy as np\n",
     "from keras.preprocessing import image\n",
     "import cv2\n",
-    "path = \"/media/new_hdd2/seg_net/data/raw/test\"\n",
+    "path = \"../data/raw/test\"\n",
     "fnames = sorted(glob.glob(os.path.join(path,\"*.jpg\")))\n",
     "images = []\n",
     "outs = []\n",
@@ -944,7 +944,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
