Added options in data preprocessing and Modified deeplabv3

--- a/notebooks/Train_segmentation_models.ipynb
+++ b/notebooks/Train_segmentation_models.ipynb
@@ -53,9 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mobilenetv2_Unet_BCE_ACC_IOU_divide_1_sigmoid_768_train_matte.hdf5\n"
+     ]
+    }
+   ],
    "source": [
     "INPUT_SHAPE =  (768,768,3) #(768,768,3) (512,512,3) (256,256,3)\n",
     "NUM_CLASS = 1\n",
@@ -64,14 +72,20 @@
     "LOSS_METRICS = 'BCE_ACC_IOU'\n",
     "MODEL_PATH = '../results/Models/Models'\n",
     "ACTIVATION = 'sigmoid'\n",
+    "DATASET = \"train_matte\"\n",
+    "IMGNORM = 'divide'\n",
     "\n",
-    "model_fname = '{0}_{1}_{2}_{3}_{4}_{5}'.format(BACKBONE,\n",
-    "                                              MODEL_NAME,\n",
-    "                                              LOSS_METRICS,\n",
-    "                                              NUM_CLASS,\n",
-    "                                              ACTIVATION,\n",
-    "                                              INPUT_SHAPE[0])\n",
-    "keras_filename = '{}.hdf5'.format(model_fname)"
+    "model_fname = '{0}_{1}_{2}_{3}_{4}_{5}_{6}_{7}'.format(BACKBONE,\n",
+    "                                                MODEL_NAME,\n",
+    "                                                LOSS_METRICS,\n",
+    "                                                IMGNORM,\n",
+    "                                                NUM_CLASS,\n",
+    "                                                ACTIVATION,\n",
+    "                                                INPUT_SHAPE[0],\n",
+    "                                                DATASET)\n",
+    "keras_filename = '{}.hdf5'.format(model_fname)\n",
+    "\n",
+    "print(keras_filename)"
    ]
   },
   {
@@ -576,10 +590,10 @@
     "                    horizontal_flip=True,\n",
     "                    fill_mode='nearest')\n",
     "\n",
-    "myGene = trainGenerator(1,'../data/raw/train_matte','images','annotations',\n",
+    "myGene = trainGenerator(1,'../data/raw/train/{}'.format(DATASET),'images','annotations',\n",
     "                        data_gen_args,save_to_dir = None,\n",
     "                        target_size = INPUT_SHAPE[:2],\n",
-    "                        imgNorm=\"divide\" , \n",
+    "                        imgNorm=IMGNORM, \n",
     "                        binary = True,\n",
     "                        num_class = NUM_CLASS, \n",
     "                        multiclass = False)\n",
@@ -587,7 +601,7 @@
     "'''valGene = validationGenerator(1,'../data/raw/val','images','annotations',\n",
     "                                save_to_dir = None,\n",
     "                                target_size = INPUT_SHAPE[:2],\n",
-    "                                imgNorm=\"divide\" , \n",
+    "                                imgNorm=IMGNORM, \n",
     "                                binary = False,\n",
     "                                num_class = NUM_CLASS, \n",
     "                                multiclass = False)'''\n",
